--- a/Views/HomeView.xaml
+++ b/Views/HomeView.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:EnvControlPanel.Views"
-    xmlns:model="using:EnvControlPanel.Model"
+    xmlns:models="using:EnvControlPanel.Models"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -44,14 +44,13 @@
 
 
         <ListView Grid.Row="2"
-                  ItemsSource="{x:Bind _devices}">
+                  ItemsSource="{x:Bind ViewModel.SerialItems}">
 
             <ListView.HeaderTemplate>
                 <DataTemplate>
 
                     <Grid Margin="4,0,4,0">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="130"/>
                             <ColumnDefinition Width="130"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
@@ -63,13 +62,6 @@
                                        Style="{StaticResource SubtitleTextBlockStyle}"/>
                         </Border>
 
-                        <Border Grid.Column="1"
-                                BorderBrush="{ThemeResource SystemAccentColor}"
-                                BorderThickness="0,0,0,1">
-                            <TextBlock Text="Device ID"
-                                       Margin="4,0,0,4"
-                                       Style="{StaticResource SubtitleTextBlockStyle}"/>
-                        </Border>
 
                         <Border Grid.Column="2"
                                 BorderBrush="{ThemeResource SystemAccentColor}"
@@ -83,7 +75,7 @@
             </ListView.HeaderTemplate>
 
             <ListView.ItemTemplate>
-                <DataTemplate x:DataType="model:EnvDevice">
+                <DataTemplate x:DataType="models:SerialComDevice">
 
                     <Grid IsHitTestVisible="False">
                         <Grid.ColumnDefinitions>
@@ -91,8 +83,8 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
 
-                        <TextBlock Text="{x:Bind Path=DeviceSerialName}"/>
-                        <TextBlock Grid.Column="1" Text="{x:Bind Path=DeviceId}"/>
+                        <TextBlock Text="{x:Bind Path=SerialName}"/>
+                        <TextBlock Grid.Column="1" Text="{x:Bind Path=ConnectStatus}"/>
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
