--- a/Views/HomeView.xaml
+++ b/Views/HomeView.xaml
@@ -41,7 +41,13 @@
             <Button Content="Connect"
                     FontWeight="Bold"
                     IsEnabled="{x:Bind ViewModel.EnableConnect, Mode=OneWay}"
-                    Command="{x:Bind ViewModel.ConnectCommand, Mode=OneWay}"/>
+                    Command="{x:Bind ViewModel.ConnectCommand, Mode=OneWay}"
+                    Margin="0,0,8,0"/>
+
+            <Button Content="Disconnect"
+                    FontWeight="Bold"
+                    IsEnabled="{x:Bind ViewModel.EnableDisconnect, Mode=OneWay}"
+                    Command="{x:Bind ViewModel.DisconnectCommand, Mode=OneWay}"/>
 
         </StackPanel>
 
