--- a/Views/DataDisplayView.xaml
+++ b/Views/DataDisplayView.xaml
@@ -22,12 +22,11 @@
                    Margin="10"/>
 
         
-        
-        
-        
+          
 
         <Grid Grid.Row="1"
-              Margin="4,20,0,0">
+              Margin="4,20,0,40">
+
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
@@ -44,7 +43,7 @@
                     <TextBlock Text="70 °C"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"/>
-                    <ProgressRing Width="250" Height="250" Maximum="120" Minimum="0" Value="70" IsIndeterminate="False"/>
+                    <ProgressRing Width="250" Height="250" Maximum="120" Minimum="0" IsIndeterminate="False" Value="40"/>
                 </Grid>
             </StackPanel>
 
@@ -59,24 +58,21 @@
                     <TextBlock Text="50 psi"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"/>
-                    <ProgressRing Width="250" Height="250" Maximum="120" Minimum="0" Value="50" IsIndeterminate="False"/>
+                    <ProgressRing Width="250" Height="250" Maximum="120" Minimum="0" IsIndeterminate="False"
+                                  Value="{x:Bind ViewModelData.Temp}/>
                 </Grid>
             </StackPanel>
 
+        </Grid>
 
 
+        
+        <Grid Grid.Row="2">
 
-
-
-
-
-
+            <TextBlock Text="TEST"/>
 
 
         </Grid>
-        
-        
-        
         
 
 
