--- a/Views/DataDisplayView.xaml
+++ b/Views/DataDisplayView.xaml
@@ -5,6 +5,7 @@
     xmlns:local="using:EnvControlPanel.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:lvc="using:LiveChartsCore.SkiaSharpView.WinUI"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
@@ -76,10 +77,12 @@
 
 
         
-        <Grid Grid.Row="2">
+        <Grid Grid.Row="2"
+              Margin="4,0,0,0">
 
-            <TextBlock Text="TEST"/>
-            
+            <lvc:CartesianChart Series="{x:Bind ViewModelData.Series}"
+                                Margin="0,0,0,20"/>
+
 
 
 
