--- a/Views/DataDisplayView.xaml
+++ b/Views/DataDisplayView.xaml
@@ -37,7 +37,21 @@
             <Button Content="TempButton"
                     Command="{x:Bind ViewModelData.AddTempCommand}"/>
 
-            <ToggleSwitch Margin="0,10,0,0"/>
+
+
+            <StackPanel Orientation="Horizontal"
+                        Margin="0,10,0,0">
+
+                <TextBlock Text="Monitoring"
+                           Style="{StaticResource SubtitleTextBlockStyle}"
+                           VerticalAlignment="Center"
+                           Margin="0,0,20,0"/>
+
+                <ToggleSwitch VerticalAlignment="Bottom"/>
+                
+            </StackPanel>
+
+            
 
         </StackPanel>
 
