--- a/Views/DataDisplayView.xaml
+++ b/Views/DataDisplayView.xaml
@@ -47,7 +47,8 @@
                            VerticalAlignment="Center"
                            Margin="0,0,20,0"/>
 
-                <ToggleSwitch VerticalAlignment="Bottom"/>
+                <ToggleSwitch VerticalAlignment="Bottom"
+                              IsOn="{x:Bind ViewModelData.DeviceStatus, Mode=TwoWay}"/>
                 
             </StackPanel>
 
