--- a/Views/DataDisplayView.xaml
+++ b/Views/DataDisplayView.xaml
@@ -32,27 +32,35 @@
 
         <StackPanel Grid.Row="1"
                     Grid.Column="0"
-                    Margin="4,20,0,0">
+                    Margin="4,20,10,0">
 
             <Button Content="TempButton"
                     Command="{x:Bind ViewModelData.AddTempCommand}"/>
 
 
+            <TextBlock Text="Monitoring"
+                       Style="{StaticResource SubtitleTextBlockStyle}"/>
 
-            <StackPanel Orientation="Horizontal"
-                        Margin="0,10,0,0">
-
-                <TextBlock Text="Monitoring"
-                           Style="{StaticResource SubtitleTextBlockStyle}"
-                           VerticalAlignment="Center"
-                           Margin="0,0,20,0"/>
-
-                <ToggleSwitch VerticalAlignment="Bottom"
-                              IsOn="{x:Bind ViewModelData.DeviceStatus, Mode=TwoWay}"/>
-                
-            </StackPanel>
+            <ToggleSwitch IsOn="{x:Bind ViewModelData.DeviceStatus, Mode=TwoWay}"/>
 
             
+            
+
+            <TextBlock Text="Mode"
+                       Style="{StaticResource SubtitleTextBlockStyle}"
+                       Margin="0,40,0,10"/>
+
+            <Button Content="Slow"
+                    HorizontalAlignment="Stretch"
+                    Margin="0,0,0,10"/>
+            
+            <Button Content="Normal"
+                    HorizontalAlignment="Stretch"
+                    Margin="0,0,0,10"/>
+
+            <Button Content="Fast"
+                    HorizontalAlignment="Stretch"
+                    Margin="0,0,0,10"/>
 
         </StackPanel>
 
