--- a/Views/DataDisplayView.xaml
+++ b/Views/DataDisplayView.xaml
@@ -81,9 +81,9 @@
                        Margin="0,0,0,10"/>
 
             <Grid>
-                <TextBlock Text="{x:Bind ViewModelData.LastTempStr, Mode=OneWay}"
+                <!--<TextBlock Text="{x:Bind ViewModelData.LastTempStr, Mode=OneWay}"
                            HorizontalAlignment="Center"
-                           VerticalAlignment="Center"/>
+                           VerticalAlignment="Center"/>-->
 
                 <ProgressRing Width="280" Height="280" 
                               Maximum="{x:Bind ViewModelData.MaxTemp}"
