--- a/Views/DataDisplayView.xaml
+++ b/Views/DataDisplayView.xaml
@@ -68,8 +68,7 @@
 
         </StackPanel>
 
-        
-        
+              
 
         <StackPanel Grid.Row="1"
                     Grid.Column="1"
@@ -81,7 +80,12 @@
                        Margin="0,0,0,10"/>
 
             <Grid>
-                <TextBlock Text="{x:Bind ViewModelData.LastTemp, Mode=OneWay}"
+                <TextBlock Text="{x:Bind ViewModelData.LastTemperature.ToString(), Mode=OneWay}"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"/>
+
+                <TextBlock Text="°C"
+                           Margin="0,30,0,0"
                            HorizontalAlignment="Center"
                            VerticalAlignment="Center"/>
 
@@ -89,7 +93,7 @@
                               Maximum="{x:Bind ViewModelData.MaxTemp}"
                               Minimum="{x:Bind ViewModelData.MinTemp}" 
                               IsIndeterminate="False" 
-                              Value="{x:Bind ViewModelData.LastTemp, Mode=OneWay}"/>
+                              Value="{x:Bind ViewModelData.LastTemperature, Mode=OneWay}"/>
             </Grid>
         </StackPanel>
 
@@ -107,6 +111,12 @@
                 <TextBlock Text="{x:Bind ViewModelData.LastPressure, Mode=OneWay}"
                        HorizontalAlignment="Center"
                        VerticalAlignment="Center"/>
+
+                <TextBlock Text="PSI"
+                           Margin="0,30,0,0"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"/>
+                
                 <ProgressRing Width="280" Height="280" 
                                   Maximum="{x:Bind ViewModelData.MaxPressure}"
                                   Minimum="{x:Bind ViewModelData.MiniPressure}" 
