--- a/Views/DataDisplayView.xaml
+++ b/Views/DataDisplayView.xaml
@@ -19,7 +19,7 @@
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="220"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
@@ -30,7 +30,92 @@
                    Margin="10"/>
 
 
-        <StackPanel Grid.Row="1"
+
+        <Grid Grid.Row="1"
+              Grid.Column="0">
+            
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            
+            <TextBlock Text="Control"
+                       Style="{StaticResource TitleTextBlockStyle}"
+                       Margin="0,0,0,10"/>
+
+            <TextBlock Grid.Row="1"
+                       Text="Monitoring:"
+                       Style="{StaticResource BaseTextBlockStyle}"
+                       VerticalAlignment="Center"
+                       Margin="0,0,10,0"/>
+            <ToggleSwitch Grid.Row="1"
+                          Grid.Column="1"
+                          IsOn="{x:Bind ViewModelData.DeviceStatus, Mode=TwoWay}"/>
+
+            <TextBlock Grid.Row="2" 
+                       Text="Temperature:"
+                       Style="{StaticResource NavigationViewItemHeaderTextStyle}"
+                       VerticalAlignment="Center"
+                       Margin="0,0,10,0"/>
+            <ToggleSwitch Grid.Row="2" 
+                          Grid.Column="1"
+                          IsOn="{x:Bind ViewModelData.TemoperatureMonitoring, Mode=TwoWay}"/>
+
+            <TextBlock Grid.Row="3" 
+                       Text="Pressure:"
+                       Style="{StaticResource NavigationViewItemHeaderTextStyle}"
+                       VerticalAlignment="Center"
+                       Margin="0,0,10,0"/>
+            <ToggleSwitch Grid.Row="3" 
+                          Grid.Column="1"
+                          IsOn="{x:Bind ViewModelData.PressureMonitoring, Mode=TwoWay}"/>
+
+
+
+            
+            <TextBlock Grid.Row="4"
+                       Text="Report Mode"
+                       Style="{StaticResource TitleTextBlockStyle}"
+                       Margin="0,20,10,0"/>
+
+            <Button Grid.Row="5" 
+                    Content="Slow"
+                    HorizontalAlignment="Stretch"
+                    Margin="0,0,0,10"/>
+
+            <Button Grid.Row="6" 
+                    Content="Normal"
+                    HorizontalAlignment="Stretch"
+                    Margin="0,0,0,10"/>
+
+            <Button Grid.Row="7" 
+                    Content="Fast"
+                    HorizontalAlignment="Stretch"
+                    Margin="0,0,0,10"/>
+
+
+
+
+
+
+
+        </Grid>
+
+
+
+        <!--<StackPanel Grid.Row="1"
                     Grid.Column="0"
                     Margin="4,20,10,0">
 
@@ -38,42 +123,12 @@
                     Command="{x:Bind ViewModelData.AddTempCommand}"/>
 
             <Button Content="Read Device Status"
-                    HorizontalAlignment="Stretch"
+                    HorizontalAlignment="Left"
                     Command="{x:Bind ViewModelData.ReadDeviceStatusCommand}"/>
 
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Monitoring:"
-                           Style="{StaticResource SubtitleTextBlockStyle}"
-                           Margin="0,0,10,0"/>
-
-                <ToggleSwitch IsOn="{x:Bind ViewModelData.DeviceStatus, Mode=TwoWay}"/>
-            </StackPanel>
-
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Temperature:"
-                           Style="{StaticResource SubtitleTextBlockStyle}"
-                           Margin="0,0,10,0"/>
-
-                <ToggleSwitch IsOn="{x:Bind ViewModelData.TemoperatureMonitoring, Mode=TwoWay}"/>
-            </StackPanel>
-
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Pressure:"
-                           Style="{StaticResource SubtitleTextBlockStyle}"
-                           Margin="0,0,10,0"/>
-
-                <ToggleSwitch IsOn="{x:Bind ViewModelData.PressureMonitoring, Mode=TwoWay}"/>
-            </StackPanel>
 
 
-
-
-
-
-
-            <TextBlock Text="Mode"
-                       Style="{StaticResource SubtitleTextBlockStyle}"
-                       Margin="0,40,0,0"/>
+            
 
             <Button Content="Slow"
                     HorizontalAlignment="Stretch"
@@ -87,7 +142,7 @@
                     HorizontalAlignment="Stretch"
                     Margin="0,0,0,10"/>
 
-        </StackPanel>
+        </StackPanel>-->
 
               
 
