--- a/Views/DataDisplayView.xaml
+++ b/Views/DataDisplayView.xaml
@@ -258,7 +258,7 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Text="Pressure (psi)"
+                <TextBlock Text="Pressure (hPa)"
                            VerticalAlignment="Center"
                            HorizontalAlignment="Center" 
                            RenderTransformOrigin="0.5,0.5"
